--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "baseUrl": ".",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -12,6 +13,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "experimentalDecorators": true,
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
@@ -20,7 +22,23 @@
       }
     ],
     "paths": {
-      "@src/*": ["./src/*"]
+      "@/*": ["./src/*"],
+
+      // Components
+      "@components/*": ["./src/components/*"],
+      "@svg/*": ["./src/components/svg/*"],
+      "@ui/*": ["./src/components/ui/*"],
+
+      // Hooks
+      "@hooks/*": ["./src/hooks/*"],
+
+      // Common
+      "@constants/*": ["./src/common/constants/*"],
+      "@funcs/*": ["./src/common/funcs/*"],
+      "@layout/*": ["./src/common/layout/*"],
+
+      // TS
+      "@ts/*": ["./src/ts/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
