--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,13 @@
       // Common
       "@constants/*": ["./src/common/constants/*"],
       "@funcs/*": ["./src/common/funcs/*"],
-      "@layout/*": ["./src/common/layout/*"],
+      "@layout": ["./src/common/libs/layout/index"],
+
+      // Pages
+      "@pages/*": ["./src/common/constants/shared/pages/*"],
+
+      // Clases
+      "@clases/*": ["./src/common/clases/*"],
 
       // TS
       "@ts/*": ["./src/ts/*"]
