chore: add @public path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
     "paths": {
       "@/*": ["./src/*"],
 
+      // Public
+      "@public/*": ["./public/*"],
+
       // Components
       "@components/*": ["./src/components/*"],
       "@svg/*": ["./src/components/svg/*"],
