--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
       "@ui/*": ["./src/components/ui/*"],
 
       // Hooks
+      "@useClientRequest":  ["./src/hooks/shared/useClientRequest"],
       "@hooks/*": ["./src/hooks/*"],
 
       // libs
