--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -10,11 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
+        with: node-version: ${{ matrix.node-version }}
+        
       - name: Install Modules
-      - run: npm i
+        run: npm i
       - name: Linting
-      - run: npm run lint
+        run: npm run lint
       - name: Build
-      - run: npm run build
+        run: npm run build
